--- a/package.json
+++ b/package.json
@@ -9,17 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
-    "next": "13.4.19",
-    "postcss": "8.4.28",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.2.2",
     "dotenv": "^16.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
+    "next": "13.4.19",
+    "postcss": "8.4.28",
     "react": "^18.0.0",
     "react-apexcharts": "^1.3.9",
     "react-blockies": "^1.4.1",
@@ -29,6 +28,8 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "reselect": "^4.1.5",
+    "tailwindcss": "3.3.3",
+    "typescript": "5.2.2",
     "web-vitals": "^2.1.4"
   },
   "browserslist": {
