--- a/config.json
+++ b/config.json
@@ -11,6 +11,22 @@
         },
         "mDAI": {
             "address": "0x9fE46736679d2D9a65F0992F2272dE9f3c7fa6e0"
+        },
+        "explorerURL": "#"
+    },
+    "5": {
+        "explorerURL": "https://goerli.etherscan.io/" ,
+        "exchange": {
+            "address": ""
+        },
+        "CBNK": {
+            "address": ""
+        },
+        "mETH": {
+            "address": ""
+        },
+        "mDAI": {
+            "address": ""
         }
     }
 }
