--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
     "@nomiclabs/hardhat-ethers": "^2.0.5",
+    "@types/react-blockies": "^1.4.2",
     "chai": "^4.3.6",
     "ethers": "^5.5.4",
     "hardhat": "^2.10.1"
